Nav spacing fix and wetv styling updates

--- a/src/styles/theme/_wetv.scss
+++ b/src/styles/theme/_wetv.scss
@@ -2,7 +2,7 @@
 
 .wetv{
 	$font-primary: 'FuturaRoundCond-Bold', 'Helvetica Neue', sans-serif;
-	$font-secondary: 'AvenirLTStd-Medium', 'Times New Roman', serif;
+	$font-secondary: 'AvenirLTStd-Medium', 'Ubuntu', sans-serif;
   --primary-dark: #212844;
   --primary-light: #ffffff;
   --secondary-dark:rgba(0,0,0,0.6);
@@ -94,5 +94,4 @@
     line-height: 1.43;
     letter-spacing: normal;
 	}
-
 }
